--- a/css/screen.css
+++ b/css/screen.css
@@ -10,6 +10,7 @@ html{
     font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
     color: #111;
     padding: 24px 24px 0; /* top left/right bottom     (anders top right bottom left)*/
+    scroll-behavior: smooth;
 }
 
 ::-moz-select{
@@ -49,7 +50,7 @@ h2{
     margin: 0 0 24px;
 }
 
-h2{
+h3{
     font-size: 18px;
     line-height: 24px;
     margin: 0 0 24px;
@@ -124,6 +125,36 @@ a:visited,
 a:active {
     color: blueviolet
 }
+
+table {
+    width: 100%;
+    border-spacing: 0;
+}
+
+th {
+    text-align: left;
+}
+
+td {
+    padding: 4px 8px;
+    border-bottom: 1px solid gainsboro;
+}
+
+.odd{
+    background-color: whitesmoke;
+}
+
+/*
+    Media Queries
+    ---
+    EXAMPLE Media Queries for Responsive Design.
+    These examples override the primary ('mobile first') styles.
+    Modify as content requires.
+*/
+
+/* Extra small devices (portrait phones, less than 576px)
+   No media query since this is the default in Bootstrap
+*/
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
